<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_title"
        android:textSize="25sp"
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <EditText
        android:id="@+id/in_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nameUser"
        android:inputType="text"
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/in_apellidoPaterrno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_apePUser"
        android:inputType="text"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/in_apellidoMaterrno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_apeMUser"
        android:inputType="text"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/in_edad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_age"
        android:inputType="number"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/in_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_user"
        android:inputType="text"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/in_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_pass"
        android:inputType="text"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_ok"
        />

</LinearLayout>