<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/user"
        />

    <EditText
        android:id="@+id/ed_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_user"
        android:textSize="25sp"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_pass"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:autofillHints="" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:layout_gravity="center"
        android:textSize="25sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/tv_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_reg"
        android:layout_gravity="center"
        android:textSize="25sp"
        />

</LinearLayout>